Add DP83848 Ethernet PHY to fsimx6ul_defconfig
PicoCOM1.2 and PicoCOMA7, as well as some customer specific boards, use
the DP83848 Ethernet PHY. Add support for it to the fsimx6ul_defconfig
so that the PHY is correctly detected. In the past, it was only detected
as GENERIC PHY.

--- a/arch/arm/configs/fsimx6ul_defconfig
+++ b/arch/arm/configs/fsimx6ul_defconfig
@@ -273,6 +273,7 @@ CONFIG_NETDEVICES=y
 # CONFIG_NET_VENDOR_VIA is not set
 # CONFIG_NET_VENDOR_WIZNET is not set
 CONFIG_AT803X_PHY=y
+CONFIG_DP83848_PHY=y
 CONFIG_MICREL_PHY=y
 CONFIG_USB_PEGASUS=m
 CONFIG_USB_RTL8150=m
