Add audio support for imx7ULP via rpmsg-audio
The audio functionality of the imx7ULP is handled by its Cortex-M4.
An rpmsg audio driver for the SGTL5000 is implemented, that transfers
the audio data and codec configuration from the Cortex-A7 to the
Cortex-M4 via rpmsg.

--- a/sound/soc/codecs/Kconfig
+++ b/sound/soc/codecs/Kconfig
@@ -210,6 +210,7 @@ config SND_SOC_ALL_CODECS
 	select SND_SOC_WM9712 if SND_SOC_AC97_BUS
 	select SND_SOC_WM9713 if SND_SOC_AC97_BUS
 	select SND_SOC_RPMSG_WM8960
+	select SND_SOC_RPMSG_SGTL5000
         help
           Normally ASoC codec drivers are only built if a machine driver which
           uses them is also built since they are only usable with a machine
@@ -1104,6 +1105,8 @@ config SND_SOC_WM9713
 config SND_SOC_RPMSG_WM8960
 	tristate
 
+config SND_SOC_RPMSG_SGTL5000
+	tristate
 # Amp
 config SND_SOC_LM4857
 	tristate
