Fix DT for efusA9, QBlissA9 and QBlissA9r2 for ft5x06_ts.c
The ft5x06_ts.c driver expects a device tree entry for "reset-gpios", but
the device trees efusa9qdl.dtsi, qblissa9qdl.dtsi and qblissa9r2qdl.dts
only had "reset-gpio". Fix these device trees.

--- a/arch/arm/boot/dts/qblissa9qdl.dtsi
+++ b/arch/arm/boot/dts/qblissa9qdl.dtsi
@@ -734,7 +734,7 @@
 		threshold = <25>;
 		interrupt-parent = <&gpio4>;
 		interrupts = <23 IRQ_TYPE_EDGE_FALLING>;
-		reset-gpio = <&gpio4 31 GPIO_ACTIVE_LOW>;
+		reset-gpios = <&gpio4 31 GPIO_ACTIVE_LOW>;
 		x-rev;
 		y-rev;
 		linux,wakeup;
