--- a/arch/arm/boot/dts/efusa9qdl.dtsi
+++ b/arch/arm/boot/dts/efusa9qdl.dtsi
@@ -952,7 +952,7 @@
 		threshold = <25>;
 		interrupt-parent = <&gpio1>;
 		interrupts = <30 IRQ_TYPE_EDGE_FALLING>;
-		reset-gpio = <&gpio1 29 GPIO_ACTIVE_LOW>;
+		reset-gpios = <&gpio1 29 GPIO_ACTIVE_LOW>;
 		x-rev;
 		y-rev;
 		linux,wakeup;
