--- a/arch/arm/boot/dts/qblissa9r2qdl.dtsi
+++ b/arch/arm/boot/dts/qblissa9r2qdl.dtsi
@@ -725,7 +725,7 @@
 		threshold = <25>;
 		interrupt-parent = <&gpio1>;
 		interrupts = <30 IRQ_TYPE_EDGE_FALLING>;
-		reset-gpio = <&gpio6 14 GPIO_ACTIVE_LOW>;
+		reset-gpios = <&gpio6 14 GPIO_ACTIVE_LOW>;
 		x-rev;
 		y-rev;
 		linux,wakeup;
