--- a/arch/arm/boot/dts/picocoremx6ul.dts
+++ b/arch/arm/boot/dts/picocoremx6ul.dts
@@ -20,7 +20,7 @@
 /dts-v1/;
 
 /* Set board revision as 3-digit number, e.g. 110 for board rev. 1.10 */
-#define CONFIG_PICOCOREMX6UL_BOARD_REVISION	100
+#define CONFIG_PICOCOREMX6UL_BOARD_REVISION	110
 
 #define DISPLAY_NONE	0	/* No display on this port */
 #define DISPLAY_LCD	1	/* LCD via RGB adapter */
@@ -825,7 +825,7 @@ wvga {					\
 				MX6UL_PAD_SNVS_TAMPER0__GPIO5_IO00 	0x0b0b0
 #endif
 				/* VLCD */
-				MX6UL_PAD_LCD_RESET__GPIO3_IO04		0x0b0b0
+				MX6UL_PAD_LCD_RESET__GPIO3_IO04		0x030b0
 
 				MX6UL_PAD_JTAG_TMS__SAI2_MCLK		0x17088
 //###				MX6UL_PAD_JTAG_TMS__CCM_CLKO1		0x17088
