Fix clock enabling in pxp_dma_v3.c, add to fsimx6ul
The CPUs i.MX6UL and i.MX6ULL use a different PXP pixel pipeline.

- i.MX6UL uses pxp_dma_v2 (like i.MX6S/SL/DL and i.MX6SX)
- i.MX6ULL uses pxp_dma_v3 (like the i.MX7D, but slightly different)

Because both CPU variants are part of fsimx6ul, add CONFIG_MXC_PXP_V3
to fsimx6ul_defconfig.

In pxp_dma_v3.c, function pxp_probe(), move the call to pxp_clk_enable()
in front of pxp_soft_reset(), otherwise access to the PXP registers in
pxp_soft_reset() is not possible and the boot process freezes.

--- a/arch/arm/configs/fsimx6ul_defconfig
+++ b/arch/arm/configs/fsimx6ul_defconfig
@@ -431,6 +431,7 @@ CONFIG_DMADEVICES=y
 CONFIG_IMX_SDMA=y
 CONFIG_MXS_DMA_EXT=y
 CONFIG_MXC_PXP_V2=y
+CONFIG_MXC_PXP_V3=y
 CONFIG_STAGING=y
 CONFIG_STAGING_MEDIA=y
 CONFIG_LIRC_STAGING=y
