--- a/arch/arm/configs/fsimx6sx_defconfig
+++ b/arch/arm/configs/fsimx6sx_defconfig
@@ -330,6 +330,10 @@ CONFIG_REGULATOR_FIXED_VOLTAGE=y
 CONFIG_REGULATOR_ANATOP=y
 CONFIG_REGULATOR_PFUZE100=y
 CONFIG_MEDIA_SUPPORT=y
+CONFIG_MEDIA_CAMERA_SUPPORT=y
+CONFIG_V4L_PLATFORM_DRIVERS=y
+CONFIG_VIDEO_MXC_OUTPUT=y
+CONFIG_VIDEO_MXC_PXP_V4L2=y
 CONFIG_DRM=y
 CONFIG_DRM_VIVANTE=y
 # CONFIG_FB_MX3 is not set
