Add support for armStoneMX8M
- add default config
- add new directory for all F&S boards device trees
- add entry to build device tree from F+S directory
- add device tree support for armStoneMX8M: Makefile and device tree

--- a/arch/arm64/boot/dts/Makefile
+++ b/arch/arm64/boot/dts/Makefile
@@ -10,6 +10,7 @@ dts-dirs += arm
 dts-dirs += broadcom
 dts-dirs += cavium
 dts-dirs += exynos
+dts-dirs += F+S
 dts-dirs += freescale
 dts-dirs += hisilicon
 dts-dirs += marvell
