--- a/arch/arm64/boot/dts/F+S/Makefile
+++ b/arch/arm64/boot/dts/F+S/Makefile
@@ -1,5 +1,9 @@
 # SPDX-License-Identifier: GPL-2.0
-dtb-$(CONFIG_ARCH_FSL_IMX8QM) += armstonemx8m.dtb
+dtb-$(CONFIG_ARCH_FSL_IMX8QM) += armstonemx8m.dtb \
+								armstonemx8m-dcss-sn65dsi84-g070y2-l01.dtb \
+								armstonemx8m-dcss-sn65dsi84-g101ice-l01.dtb \
+								armstonemx8m-lcdif-sn65dsi84-g070y2-l01.dtb \
+								armstonemx8m-lcdif-sn65dsi84-g101ice-l01.dtb
 
 always		:= $(dtb-y)
 subdir-y	:= $(dts-dirs)
