--- a/arch/arm64/boot/dts/F+S/Makefile
+++ b/arch/arm64/boot/dts/F+S/Makefile
@@ -5,6 +5,8 @@ dtb-$(CONFIG_ARCH_FSL_IMX8QM) += armstonemx8m.dtb \
 								armstonemx8m-lcdif-sn65dsi84-g070y2-l01.dtb \
 								armstonemx8m-lcdif-sn65dsi84-g101ice-l01.dtb
 
+dtb-$(CONFIG_ARCH_FSL_IMX8MM) += picocoremx8mm.dtb \
+								picocoremx8mm-bbdsi.dtb
 always		:= $(dtb-y)
 subdir-y	:= $(dts-dirs)
 clean-files	:= *.dtb
