Add RTC IRQ settings on efusA9 and efusA9X
On m ost F&S boards, the Real Time Clock (RTC) has an interrupt output
that can be used as an interrupt to the CPU, for example to wake up the
CPU or to signal a timer alarm. On efusA9 and efusA9X, the configurations
in the device trees were missing.

--- a/arch/arm/boot/dts/efusa9qdl.dtsi
+++ b/arch/arm/boot/dts/efusa9qdl.dtsi
@@ -1382,6 +1382,8 @@
 				MX6QDL_PAD_ENET_TXD0__GPIO1_IO30	0x1b0b0
 				/* I2C_A reset */
 				MX6QDL_PAD_ENET_TXD1__GPIO1_IO29	0x1b0b0
+				/* RTC_IRQ */
+				MX6QDL_PAD_ENET_TX_EN__GPIO1_IO28	0x0b0b0
 			>;
 		};
 
