Add support for g050tan01 panel
Support for MIPI-DSI panel g050tan01. Panel based on NT35521
MIPI-DSI interface controller from Novatek.
- Add Kconfig entry to enable the driver
- Add Makefile entry to build the driver
- Add basic panel driver
- Add device tree

--- a/drivers/gpu/drm/panel/Kconfig
+++ b/drivers/gpu/drm/panel/Kconfig
@@ -134,5 +134,14 @@ config DRM_PANEL_RAYDIUM_RM67191
 	help
 	  Say Y here if you want to enable support for Raydium RM67191 FHD
 	  (1080x1920) DSI panel.
+	  
+config DRM_PANEL_NOVATEK_NT35521
+	tristate "Novatek NT35521 panel"
+	depends on OF
+	depends on DRM_MIPI_DSI
+	depends on BACKLIGHT_CLASS_DEVICE
+	help
+	  Say Y here if you want to enable support for Novatek NT35521
+	  (800x1280) DSI panel.
 
 endmenu
