--- a/arch/arm64/boot/dts/F+S/Makefile
+++ b/arch/arm64/boot/dts/F+S/Makefile
@@ -8,7 +8,8 @@ dtb-$(CONFIG_ARCH_FSL_IMX8QM) += armstonemx8m.dtb \
 dtb-$(CONFIG_ARCH_FSL_IMX8MM) += picocoremx8mm.dtb \
 								picocoremx8mm-bbdsi.dtb \
 								picocoremx8mm-lcdif-tc358764-g070y2-l01.dtb \
-								picocoremx8mm-lcdif-tc358764-j070wvtc0211.dtb
+								picocoremx8mm-lcdif-tc358764-j070wvtc0211.dtb \
+								picocoremx8mm-lcdif-g050tan01.dtb
 always		:= $(dtb-y)
 subdir-y	:= $(dts-dirs)
 clean-files	:= *.dtb
