Fix ov564x_mipi devicetree entry
The driver ov5640_mipi.c needs an v_channel_id set to probe.

--- a/arch/arm/boot/dts/armstonea9r2qdl.dtsi
+++ b/arch/arm/boot/dts/armstonea9r2qdl.dtsi
@@ -671,6 +671,7 @@
 		 * cameras maybe need a gpio to perform a reset. */
 		/* rst-gpios = <dummy>; */
 		csi_id = <0>;
+		v_channel_id = <0>;
 		mclk = <24000000>;		/* OSC out */
 		mclk_source = <0>;
 	};
