--- a/arch/arm/boot/dts/qblissa9r2qdl.dtsi
+++ b/arch/arm/boot/dts/qblissa9r2qdl.dtsi
@@ -653,6 +653,7 @@
 		en-gpios = <&gpio5 24 GPIO_ACTIVE_LOW>;
 		rst-gpios = <&gpio5 23 GPIO_ACTIVE_LOW>;
 		csi_id = <0>;
+		v_channel_id = <0>;
 		mclk = <24000000>;
 		mclk_source = <0>;
 	};
