--- a/arch/arm/boot/dts/picocoremx7ulp.dts
+++ b/arch/arm/boot/dts/picocoremx7ulp.dts
@@ -184,6 +184,14 @@
 #endif
 	};
 
+	extcon_usb1: extcon_usb1 {
+		compatible = "linux,extcon-usb-gpio";
+		id-gpio = <&gpio_ptc 13 GPIO_ACTIVE_HIGH>;
+		pinctrl-names = "default", "sleep";
+		pinctrl-0 = <&pinctrl_extcon_usb1>;
+		pinctrl-1 = <&pinctrl_extcon_usb1>;
+	};
+
 	/* TODO check node */
 	pf1550-rpmsg {
 		compatible = "fsl,pf1550-rpmsg";
@@ -458,6 +466,10 @@
 &usbotg1 {
 	pinctrl-names = "default";
 	pinctrl-0 = <&pinctrl_usbotg1>;
+	/* Set ID Pin as extcon device instead of dedicated ID. There is
+	 * a problem with resume mode if we are using dedicated ID function.
+	 */
+	extcon = <0>, <&extcon_usb1>;
 	srp-disable;
 	hnp-disable;
 	adp-disable;
@@ -941,8 +953,12 @@
 			fsl,pins = <
 				/* USB otg Power enable */
 				IMX7ULP_PAD_PTE15__USB0_PWR	0x00003
-				/* USB_OTG1_ID: low: host, open: device */
-				IMX7ULP_PAD_PTC13__USB0_ID	0x10003
+			>;
+		};
+
+		pinctrl_extcon_usb1: extcon1grp {
+			fsl,pins = <
+				IMX7ULP_PAD_PTC13__PTC13	0x10003
 			>;
 		};
 	};
